--- a/transmission/docker-compose.yml
+++ b/transmission/docker-compose.yml
@@ -9,7 +9,7 @@ services:
       - TZ=Europe/Warsaw
       - TRANSMISSION_WEB_HOME=/transmission-web-control/ #optional
     volumes:
-      - ./config:/config
+      - config:/config
       - /mnt/hdd:/downloads
       - /mnt/hdd/watch:/watch
     ports:
@@ -17,3 +17,5 @@ services:
       - 51413:51413
       - 51413:51413/udp
     restart: unless-stopped
+volumes:
+  config:
