--- a/.tmux.conf
+++ b/.tmux.conf
@@ -8,6 +8,7 @@
 
 # -- general -------------------------------------------------------------------
 
+set-option -g default-shell /usr/bin/fish
 set -g default-terminal "screen-256color" # colors!
 setw -g xterm-keys on
 set -s escape-time 10                     # faster command sequences
