Add mappings to my dotfiles

--- a/.dotfiles/mappings.json
+++ b/.dotfiles/mappings.json
@@ -13,8 +13,9 @@
 		".profile":       "~/.profile",
 		".pryrc":         "~/.pryrc",
 		".pylintrc":      "~/.pylintrc",
-		".tmux.conf":     "~/.tmux.conf",
 		".vim":           "~/.vim",
+		".tmux.conf":     "~/.tmux.conf",
+		".tmux.conf.local":"~/.tmux.conf.local",
 		".vimrc":         "~/.vimrc",
 		".zlogin":        "~/.zlogin",
 		".zprofile":      "~/.zprofile",
@@ -30,6 +31,7 @@
 		"eslintrc.json":  "~/.eslintrc.json",
 		"eslintrc.yml":   "~/.eslintrc.yml",
 		"gvimrc":         "~/.gvimrc",
+		"htoprc":         "~/.config/htop/htoprc",
 		"npmrc":          "~/.npmrc",
 		"profile":        "~/.profile",
 		"pryrc":          "~/.pryrc",
