--- a/.dotfiles/mappings.json
+++ b/.dotfiles/mappings.json
@@ -23,6 +23,7 @@
 		".zprofile":      "~/.zprofile",
 		".zshenv":        "~/.zshenv",
 		".zshrc":         "~/.zshrc",
+		".p10k.zsh":      "~/.p10k.zsh",
 		"agignore":       "~/.agignore",
 		"bash_login":     "~/.bash_login",
 		"bash_profile":   "~/.bash_profile",
