--- a/settings.json
+++ b/settings.json
@@ -2,67 +2,60 @@
 // It should still be usable in newer versions, but newer versions might have additional
 // settings, help text, or changes that you will not see unless you clear this file
 // and let us generate a new one for you.
-
 // To view the default settings, hold "alt" while clicking on the "Settings" button.
 // For documentation on these settings, see: https://aka.ms/terminal-documentation
 {
     "$schema": "https://aka.ms/terminal-profiles-schema",
-
     "defaultProfile": "{2c4de342-38b7-51cf-b940-2309a097f518}",
-
     // You can add more global application settings here.
     // To learn more about global settings, visit https://aka.ms/terminal-global-settings
-
     // If enabled, selections are automatically copied to your clipboard.
-
     // If enabled, formatted data is also copied to your clipboard
     "copyFormatting": true,
-	"confirmCloseAllTabs": false,
-	"launchMode": "maximized",
-	"largePasteWarning": false,
-	"multiLinePasteWarning": false,
-	"useTabSwitcher": false,
-	"disabledProfileSources": ["Windows.Terminal.Azure",],
-	"tabWidthMode": "titleLength",
-
+    "confirmCloseAllTabs": false,
+    "launchMode": "maximized",
+    "largePasteWarning": false,
+    "multiLinePasteWarning": false,
+    "useTabSwitcher": false,
+    "disabledProfileSources": [
+        "Windows.Terminal.Azure",
+    ],
+    "tabWidthMode": "titleLength",
     // A profile specifies a command to execute paired with information about how it should look and feel.
     // Each one of them will appear in the 'New Tab' dropdown,
     //   and can be invoked from the commandline with `wt.exe -p xxx`
     // To learn more about profiles, visit https://aka.ms/terminal-profile-settings
-    "profiles":
-    {
-        "defaults":
-        {
+    "profiles": {
+        "defaults": {
             // Put settings here that you want to apply to all profiles.
-			"colorScheme": "Solarized Dark",
-			"fontFace": "Jetbrains Mono",
-			"padding": 0,
-			"useAcrylic": true,
-			"acrylicOpacity": 0.8,
+            "colorScheme": "Solarized Dark",
+            "fontFace": "Jetbrains Mono",
+            "padding": 0,
+            "useAcrylic": true,
+            "acrylicOpacity": 0.8,
         },
-        "list":
-        [
-		    {
+        "list": [
+            {
                 "guid": "{2c4de342-38b7-51cf-b940-2309a097f518}",
                 "name": "Tiger",
                 "sour": "Windows.Terminal.Wsl"
             },
-		    {
+            {
                 "guid": "{2c4de342-38b7-51cf-b940-2309a097f519}",
                 "name": "Ant",
                 "commandline": "wsl mosh ant"
             },
-		    {
+            {
                 "guid": "{2c4de342-38b7-51cf-b940-2309a097f520}",
                 "name": "Bee",
                 "commandline": "wsl mosh bee"
             },
-			{
+            {
                 "guid": "{2c4de342-38b7-51cf-b940-2309a097f521}",
                 "name": "Cat",
                 "commandline": "wsl mosh cat"
             },
-			{
+            {
                 "guid": "{2c4de342-38b7-51cf-b940-2309a097f522}",
                 "name": "router",
                 "commandline": "wsl ssh router"
@@ -87,27 +80,40 @@
             },
         ]
     },
-
     // Add custom color schemes to this array.
     // To learn more about color schemes, visit https://aka.ms/terminal-color-schemes
     "schemes": [],
-
-
     // Add custom keybindings to this array.
     // To unbind a key combination from your defaults.json, set the command to "unbound".
     // To learn more about keybindings, visit https://aka.ms/terminal-keybindings
-    "keybindings":
-    [
+    "keybindings": [
         // Press Ctrl+Shift+F to open the search box
-        { "command": "find", "keys": "ctrl+shift+f" },
-
+        {
+            "command": "find",
+            "keys": "ctrl+shift+f"
+        },
         // Press Alt+Shift+D to open a new pane.
         // - "split": "auto" makes this pane open in the direction that provides the most surface area.
         // - "splitMode": "duplicate" makes the new pane use the focused pane's profile.
         // To learn more about panes, visit https://aka.ms/terminal-panes
-        { "command": { "action": "splitPane", "split": "auto", "splitMode": "duplicate" }, "keys": "alt+shift+d" },
-		{ "command": "commandPalette", "keys": "f1" },
-		{ "command": { "action": "sendInput", "input": "\u0009" }, "keys": "~" }
-
+        {
+            "command": {
+                "action": "splitPane",
+                "split": "auto",
+                "splitMode": "duplicate"
+            },
+            "keys": "alt+shift+d"
+        },
+        {
+            "command": "commandPalette",
+            "keys": "f1"
+        },
+        {
+            "command": {
+                "action": "sendInput",
+                "input": "\u0009"
+            },
+            "keys": "~"
+        }
     ]
 }
